syntax = "proto3";

package head_pose;

option go_package = "github.com/attention-detection/api-gateway/pkg/proto/head_pose";

// Head Pose Estimation Microservice
service HeadPoseService {
  // Estimate head pose from landmarks
  rpc EstimatePose(PoseRequest) returns (PoseResponse);
  
  // Batch estimation
  rpc BatchEstimate(BatchPoseRequest) returns (BatchPoseResponse);
  
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);
}

message PoseRequest {
  string request_id = 1;
  repeated Landmark landmarks = 2;
  int32 frame_width = 3;
  int32 frame_height = 4;
}

message Landmark {
  int32 index = 1;
  float x = 2;
  float y = 3;
  float z = 4;
}

message PoseResponse {
  string request_id = 1;
  HeadPose pose = 2;
  float processing_time_ms = 3;
  bool success = 4;
  string error = 5;
}

message HeadPose {
  float yaw = 1;    // Left/right rotation (degrees)
  float pitch = 2;  // Up/down rotation (degrees)
  float roll = 3;   // Tilt rotation (degrees)
  repeated float rotation_vector = 4;
  repeated float translation_vector = 5;
}

message BatchPoseRequest {
  repeated PoseRequest requests = 1;
}

message BatchPoseResponse {
  repeated PoseResponse responses = 1;
}

message HealthRequest {}
message HealthResponse {
  bool healthy = 1;
  string version = 2;
}

